# webhook_sender

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/discord/: content.rs  mod.rs
tests/: discord.rs
