[package]
name = "webhook_sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
async-trait = { version = "0.1", optional = true }
serde_json = "1"
[dev-dependencies]
tokio = { version = "1", features = ["full"] }
[features]
default = ["async-trait"]
discord = []
